trunk/Archive2/e3/4ef64ea738a928/output
main.cpp:13:9: error: excess elements in struct initializer
    X x{f()};
        ^~~
1 error generated.
