trunk/Archive2/e3/4ef64ea738a928/main.cpp
#include <iostream>

struct X 
{   //X(){};
    explicit X(const X&) = default;
}; 
X f() {
    return {};
} 

int main() {
    
    X x{f()};
}